UserController, OpenApi, initial security config, bcrypt
